# advent-of-code

2021/: 16-test10.input  16-test11.input  16-test12.input  16-test13.input  16-test14.input  16-test15.input  16-test8.input  16-test9.input  16b.input  Dockerfile  build_container.sh  day10a.ml  day10b.ml  day11a.ml  day11b.ml  day12a.ml  day12b.ml  day13a.ml  day13b.ml  day14a.ml  day14b.ml  day15a.ml  day15b.ml  day16a.ml  day16b.ml  day17a.ml  day1a.ml  day1b.ml  day2a.ml  day2b.ml  day3a.ml  day3b.ml  day3b_convert.ml  day4a.ml  day4b.ml  day5a.ml  day5b.ml  day6a.ml  day6b.ml  day7a.ml  (+9 more)
2021/lib/: binheap.ml  dune  graph.ml  list_utils.ml  point.ml  utils.ml
2021/test/: binheap_test.ml  dune  utils_test.ml
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  main.rs
2024/: README.md  container.bash  gleam.toml  manifest.toml
2024/src/: aoc.gleam  day01.gleam  day02.gleam  day03.gleam  day04.gleam  day05.gleam  day06.gleam  day07.gleam  day08.gleam  util.gleam
2024/test/: aoc_test.gleam
