(executables
        (names day1a day1b day2a day2b day3a day3b day3b_convert day4a day4b day5a day5b day6a day6b
               day7a day7b day8a day8b day9a day9b day10a day10b day11a day11b day12a day12b
               day13a day13b day14a day14b day15a)
        (modes exe byte)
        (libraries utils))

